--- a/admin/index.html
+++ b/admin/index.html
@@ -5,6 +5,148 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>TextMyLink CMS</title>
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <style>
+      :root {
+        color-scheme: light;
+      }
+
+      body {
+        margin: 0;
+        font-family: "Inter", "Helvetica Neue", Arial, sans-serif;
+        background: #f5f7fb;
+        color: #1a2340;
+      }
+
+      .tml-dashboard {
+        min-height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 48px 16px;
+        background: radial-gradient(circle at 20% 20%, rgba(130, 161, 255, 0.18), transparent 55%),
+          radial-gradient(circle at 80% 0%, rgba(156, 109, 255, 0.12), transparent 45%),
+          #f5f7fb;
+        transition: opacity 0.2s ease, visibility 0.2s ease;
+      }
+
+      .tml-dashboard--hidden {
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+      }
+
+      .tml-dashboard__panel {
+        width: min(420px, 100%);
+        background: #ffffff;
+        border-radius: 24px;
+        padding: 28px 28px 24px;
+        box-shadow: 0 30px 60px -40px rgba(30, 52, 106, 0.6), 0 12px 32px -18px rgba(55, 99, 194, 0.3);
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+      }
+
+      .tml-dashboard__new {
+        width: 100%;
+        appearance: none;
+        border: none;
+        border-radius: 18px;
+        padding: 16px 20px;
+        font-size: 1.05rem;
+        font-weight: 600;
+        cursor: pointer;
+        color: #1f3cf6;
+        background: linear-gradient(135deg, rgba(115, 143, 255, 0.18), rgba(164, 197, 255, 0.32));
+        transition: transform 0.18s ease, box-shadow 0.18s ease, background 0.18s ease;
+      }
+
+      .tml-dashboard__new:hover,
+      .tml-dashboard__new:focus-visible {
+        transform: translateY(-1px);
+        box-shadow: 0 14px 28px -18px rgba(42, 76, 200, 0.7);
+        background: linear-gradient(135deg, rgba(115, 143, 255, 0.28), rgba(164, 197, 255, 0.42));
+        outline: none;
+      }
+
+      .tml-dashboard__section {
+        display: flex;
+        flex-direction: column;
+        gap: 14px;
+      }
+
+      .tml-dashboard__heading {
+        margin: 0;
+        font-size: 0.72rem;
+        font-weight: 700;
+        letter-spacing: 0.16em;
+        text-transform: uppercase;
+        color: #8794b5;
+      }
+
+      .tml-dashboard__list {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+      }
+
+      .tml-dashboard__item {
+        display: block;
+        padding: 15px 18px;
+        border-radius: 16px;
+        background: #f8f9ff;
+        color: #1a2340;
+        text-decoration: none;
+        font-weight: 500;
+        line-height: 1.35;
+        box-shadow: inset 0 0 0 1px rgba(143, 162, 225, 0.22);
+        transition: transform 0.18s ease, box-shadow 0.18s ease, background 0.18s ease;
+      }
+
+      .tml-dashboard__item:hover,
+      .tml-dashboard__item:focus-visible {
+        background: #eef1ff;
+        box-shadow: inset 0 0 0 1px rgba(93, 123, 255, 0.45);
+        transform: translateY(-1px);
+        outline: none;
+      }
+
+      .tml-dashboard__empty {
+        padding: 16px 18px;
+        border-radius: 16px;
+        background: #f1f4fb;
+        color: #8c97b8;
+        font-weight: 500;
+      }
+
+      .tml-dashboard__error {
+        color: #d22c45;
+        font-size: 0.85rem;
+      }
+
+      .tml-dashboard__loading {
+        color: #5d6c92;
+        font-size: 0.9rem;
+      }
+
+      .tml-cms-hidden {
+        display: none !important;
+      }
+
+      @media (max-width: 520px) {
+        .tml-dashboard__panel {
+          border-radius: 20px;
+          padding: 24px 22px 20px;
+        }
+
+        .tml-dashboard__new {
+          border-radius: 16px;
+          font-size: 1rem;
+        }
+      }
+    </style>
     <script>
       (function () {
         function bindIdentity(identity) {
@@ -43,7 +185,348 @@
     </script>
   </head>
   <body>
-    <div id="nc-root"></div>
+    <div class="tml-dashboard" id="tml-dashboard">
+      <div class="tml-dashboard__panel">
+        <button type="button" class="tml-dashboard__new" data-action="new-post">Draft New Post</button>
+        <section class="tml-dashboard__section">
+          <h2 class="tml-dashboard__heading">Drafts</h2>
+          <ul class="tml-dashboard__list" data-list="drafts">
+            <li class="tml-dashboard__loading" data-status="loading">Loading drafts…</li>
+          </ul>
+        </section>
+        <section class="tml-dashboard__section">
+          <h2 class="tml-dashboard__heading">Published</h2>
+          <ul class="tml-dashboard__list" data-list="published">
+            <li class="tml-dashboard__loading" data-status="loading">Loading published posts…</li>
+          </ul>
+        </section>
+        <div class="tml-dashboard__error" data-status="error" hidden></div>
+      </div>
+    </div>
+    <div id="nc-root" class="tml-cms-hidden"></div>
     <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+    <script>
+      (function () {
+        var DASHBOARD_HASH = "#/dashboard";
+        var COLLECTIONS = ["blog_drafts", "blog_published"];
+
+        function getCMSGlobal() {
+          return (
+            window.DecapCms ||
+            (window.DecapCMS && window.DecapCMS.default) ||
+            window.CMS ||
+            window.NetlifyCmsApp ||
+            window.NetlifyCms ||
+            null
+          );
+        }
+
+        function waitForCMS(attempts) {
+          return new Promise(function (resolve, reject) {
+            function check() {
+              var cms = getCMSGlobal();
+
+              if (cms && cms.store && cms.actions) {
+                resolve(cms);
+                return;
+              }
+
+              if (attempts-- <= 0) {
+                reject(new Error("Decap CMS failed to initialize"));
+                return;
+              }
+
+              window.setTimeout(check, 250);
+            }
+
+            check();
+          });
+        }
+
+        function waitForCollections(cms, attempts) {
+          return new Promise(function (resolve, reject) {
+            function check() {
+              try {
+                var state = cms.store.getState();
+                var collections = state && state.collections;
+
+                if (collections && typeof collections.get === "function") {
+                  var ready = COLLECTIONS.every(function (name) {
+                    return collections.has(name);
+                  });
+
+                  if (ready) {
+                    resolve();
+                    return;
+                  }
+                }
+              } catch (error) {
+                console.error("Failed to inspect CMS collections", error);
+              }
+
+              if (attempts-- <= 0) {
+                reject(new Error("Collections never became available"));
+                return;
+              }
+
+              window.setTimeout(check, 250);
+            }
+
+            check();
+          });
+        }
+
+        function waitForEntries(cms, name, attempts) {
+          return new Promise(function (resolve, reject) {
+            function check() {
+              var state = cms.store.getState();
+              var entriesState = state && state.entries;
+
+              if (entriesState && typeof entriesState.getIn === "function") {
+                var ids = entriesState.getIn(["pages", name, "ids"]);
+                var fetching = entriesState.getIn(["pages", name, "isFetching"]);
+
+                if (ids && (!fetching || fetching === false)) {
+                  resolve();
+                  return;
+                }
+              }
+
+              if (attempts-- <= 0) {
+                reject(new Error("Entries failed to load for " + name));
+                return;
+              }
+
+              window.setTimeout(check, 250);
+            }
+
+            check();
+          });
+        }
+
+        function ensureEntriesLoaded(cms, name) {
+          return waitForCollections(cms, 120)
+            .then(function () {
+              var state = cms.store.getState();
+              var collection = state.collections.get(name);
+
+              if (!collection) {
+                throw new Error("Collection not found: " + name);
+              }
+
+              var entriesState = state.entries;
+              var ids = entriesState && entriesState.getIn(["pages", name, "ids"]);
+              var fetching = entriesState && entriesState.getIn(["pages", name, "isFetching"]);
+
+              if (!ids || fetching) {
+                return cms.store.dispatch(cms.actions.loadEntries(collection)).catch(function (error) {
+                  console.error("Failed to load entries", error);
+                });
+              }
+
+              return Promise.resolve();
+            })
+            .then(function () {
+              return waitForEntries(cms, name, 160);
+            });
+        }
+
+        function extractEntries(cms, name) {
+          var state = cms.store.getState();
+          var entriesState = state.entries;
+          var ids = entriesState && entriesState.getIn(["pages", name, "ids"]);
+
+          if (!ids || typeof ids.toArray !== "function") {
+            return [];
+          }
+
+          return ids
+            .toArray()
+            .map(function (slug) {
+              var entry = entriesState.getIn(["entities", name + "." + slug]);
+
+              if (!entry) {
+                return null;
+              }
+
+              var data = typeof entry.get === "function" ? entry.get("data") : entry.data;
+              var dataObject = data && typeof data.toJS === "function" ? data.toJS() : data || {};
+              var title = dataObject && dataObject.title ? dataObject.title : slug;
+              var dateValue = dataObject && dataObject.date ? Date.parse(dataObject.date) : NaN;
+
+              return {
+                slug: slug,
+                title: title,
+                date: isNaN(dateValue) ? null : dateValue,
+                collection: name,
+              };
+            })
+            .filter(Boolean)
+            .sort(function (a, b) {
+              if (a.date && b.date && a.date !== b.date) {
+                return b.date - a.date;
+              }
+
+              var titleA = (a.title || "").toLowerCase();
+              var titleB = (b.title || "").toLowerCase();
+              return titleA < titleB ? -1 : titleA > titleB ? 1 : 0;
+            });
+        }
+
+        function renderLists(drafts, published) {
+          var dashboard = document.getElementById("tml-dashboard");
+          var draftsList = dashboard.querySelector('[data-list="drafts"]');
+          var publishedList = dashboard.querySelector('[data-list="published"]');
+          var errorEl = dashboard.querySelector('[data-status="error"]');
+
+          errorEl.hidden = true;
+          draftsList.innerHTML = "";
+          publishedList.innerHTML = "";
+
+          if (!drafts.length) {
+            var emptyDraft = document.createElement("li");
+            emptyDraft.className = "tml-dashboard__empty";
+            emptyDraft.textContent = "No drafts yet.";
+            draftsList.appendChild(emptyDraft);
+          } else {
+            drafts.forEach(function (entry) {
+              draftsList.appendChild(createEntryItem(entry));
+            });
+          }
+
+          if (!published.length) {
+            var emptyPublished = document.createElement("li");
+            emptyPublished.className = "tml-dashboard__empty";
+            emptyPublished.textContent = "No published posts yet.";
+            publishedList.appendChild(emptyPublished);
+          } else {
+            published.forEach(function (entry) {
+              publishedList.appendChild(createEntryItem(entry));
+            });
+          }
+        }
+
+        function createEntryItem(entry) {
+          var item = document.createElement("li");
+          var link = document.createElement("a");
+          link.className = "tml-dashboard__item";
+          link.href = "#/collections/" + entry.collection + "/entries/" + entry.slug;
+          link.textContent = entry.title;
+          link.addEventListener("click", function () {
+            showCMS();
+          });
+          item.appendChild(link);
+          return item;
+        }
+
+        function showDashboard() {
+          var dashboard = document.getElementById("tml-dashboard");
+          var root = document.getElementById("nc-root");
+          dashboard.classList.remove("tml-dashboard--hidden");
+          root.classList.add("tml-cms-hidden");
+        }
+
+        function showCMS() {
+          var dashboard = document.getElementById("tml-dashboard");
+          var root = document.getElementById("nc-root");
+          dashboard.classList.add("tml-dashboard--hidden");
+          root.classList.remove("tml-cms-hidden");
+        }
+
+        function syncView(forceDashboard) {
+          var hash = window.location.hash || "";
+          var editing = hash.indexOf("#/collections/") === 0;
+
+          if (editing) {
+            showCMS();
+
+            if (forceDashboard) {
+              window.requestAnimationFrame(function () {
+                window.location.replace(DASHBOARD_HASH);
+              });
+            }
+          } else {
+            showDashboard();
+
+            if (!hash || hash === "#/" || hash === "#") {
+              window.requestAnimationFrame(function () {
+                window.location.replace(DASHBOARD_HASH);
+              });
+            }
+          }
+        }
+
+        function attachActions() {
+          var dashboard = document.getElementById("tml-dashboard");
+          var newButton = dashboard.querySelector('[data-action="new-post"]');
+
+          newButton.addEventListener("click", function () {
+            window.location.hash = "#/collections/blog_drafts/new";
+            showCMS();
+          });
+
+          window.addEventListener("hashchange", function () {
+            syncView(false);
+          });
+
+          syncView(true);
+        }
+
+        function initializeDashboard(cms) {
+          attachActions();
+
+          Promise.all(
+            COLLECTIONS.map(function (collection) {
+              return ensureEntriesLoaded(cms, collection);
+            })
+          )
+            .then(function () {
+              var drafts = extractEntries(cms, "blog_drafts");
+              var published = extractEntries(cms, "blog_published");
+              renderLists(drafts, published);
+
+              function buildKey(entries) {
+                return entries
+                  .map(function (entry) {
+                    return entry.slug + "::" + (entry.title || "");
+                  })
+                  .join("|");
+              }
+
+              var lastState = {
+                draftsKey: buildKey(drafts),
+                publishedKey: buildKey(published),
+              };
+
+              cms.store.subscribe(function () {
+                var nextDrafts = extractEntries(cms, "blog_drafts");
+                var nextPublished = extractEntries(cms, "blog_published");
+                var draftsKey = buildKey(nextDrafts);
+                var publishedKey = buildKey(nextPublished);
+
+                if (draftsKey !== lastState.draftsKey || publishedKey !== lastState.publishedKey) {
+                  lastState = { draftsKey: draftsKey, publishedKey: publishedKey };
+                  renderLists(nextDrafts, nextPublished);
+                }
+              });
+            })
+            .catch(function (error) {
+              var dashboard = document.getElementById("tml-dashboard");
+              var errorEl = dashboard.querySelector('[data-status="error"]');
+              errorEl.hidden = false;
+              errorEl.textContent = "Unable to load posts. Please refresh.";
+              console.error(error);
+            });
+        }
+
+        waitForCMS(120)
+          .then(function (cms) {
+            initializeDashboard(cms);
+          })
+          .catch(function (error) {
+            console.error(error);
+          });
+      })();
+    </script>
   </body>
 </html>
